--- a/src/main/resources/templates/specifications/specifications.html
+++ b/src/main/resources/templates/specifications/specifications.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body}, ~{::head},'home')}">
+<html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout2 :: layout (~{::body}, ~{::head}, 'specifications_spa')}">
 <head>
     <script th:src="@{/webjars/jquery/3.6.3/jquery.min.js}"></script>
     <script th:src="@{/webjars/jstree/3.3.14/jstree.min.js}"></script>
