--- a/src/main/resources/templates/specification/addUpdateSpecification.html
+++ b/src/main/resources/templates/specification/addUpdateSpecification.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html xmlns:th="https://www.thymeleaf.org"
-  th:replace="~{fragments/layout :: layout (~{::body}, ~{::head},'specifications')}">
+  th:replace="~{fragments/layout :: layout (~{::body}, ~{::head}, 'specifications')}">
 <head>
   <script type="text/javascript" th:src="@{/resources/js/collectionDropdown.js}"></script>
 </head>
@@ -11,17 +11,17 @@
   <form th:object="${specification}" class="form-horizontal" id="add-specification-form" method="post">
     <input type="hidden" id="collectionType" name="collectionType" th:attr="value=${collectionType} ?: ''"/>
     <input type="hidden" id="collectionItemId" name="collectionItemId" th:attr="value=${collectionItemId} ?: -1"/>
-    <div class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
-      <span th:if="${specification['new']}">
+    <div class="col-sm-offset-2 d-flex justify-content-end">
+      <span th:if="${specification['new'] && collectionType == 'srcSpecification'}">
         <div th:replace="~{fragments/collectionDropdown :: collectionDropdown(${specifications}, 'Copy Existing Specification', 'No Specifications defined', 'srcSpecification')}" />
       </span>
-      <span th:if="${specification['new']}" class="ms-2">
+      <span th:if="${specification['new'] && collectionType == 'templateDeepCopy'}" class="ms-2">
         <div th:replace="~{fragments/collectionDropdown :: collectionDropdown(${specificationTemplates}, 'Create from Template', 'No Specification Templates defined', 'templateDeepCopy')}" />
       </span>
-      <span class="ms-2">
+      <span th:if="${specification['new'] && collectionType == 'copyTemplate'}"  class="ms-2">
           <div th:replace="~{fragments/templateDropdown :: templateDropdown(${specificationTemplates})}" />
       </span>
-      <a th:if="${!specification['new']}" class="btn btn-sm btn-primary ms-2" onclick="if(confirm('Are you sure you want to delete this specification?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
+<!--      <a th:if="${!specification['new']}" class="btn btn-sm btn-primary ms-2" onclick="if(confirm('Are you sure you want to delete this specification?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>-->
     </div>
     <div class="form-group has-feedback">
       <input
@@ -35,7 +35,11 @@
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10 d-flex">
-        <button class="btn btn-primary" type="submit"
+        <a class="btn btn-primary" type="button" href="/specifications1">
+          <i class="fa fa-ban me-1" aria-hidden="true"></i>
+          <span>Cancel</span>
+        </a>
+        <button class="btn btn-primary ms-2" type="submit"
           th:with="text=${specification['new']} ? 'Add Specification' : 'Update Specification',
                   icon=${specification['new']} ? 'fa-plus' : 'fa-pencil-square-o'">
           <i class="fa me-1"  th:classappend="${icon}" aria-hidden="true"></i>
@@ -48,5 +52,8 @@
   <form th:if="${!specification['new']}" id="deleteForm" th:object="${specification}" th:action="@{/specification/__${specification.id}__/delete}" method="post">
       <input type="hidden" th:field="*{id}"/>
   </form>
+  <script type="text/javascript">
+    updateTreeForSpecification([[${specification.id}]]);
+  </script>
 </body>
 </html>
