--- a/src/main/resources/templates/specificationobjective/addUpdateSpecificationObjective.html
+++ b/src/main/resources/templates/specificationobjective/addUpdateSpecificationObjective.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html xmlns:th="https://www.thymeleaf.org"
-  th:replace="~{fragments/layout :: layout (~{::body}, ~{::head},'specificationObjectives')}">
+  th:replace="~{fragments/layout :: layout (~{::body}, ~{::head}, 'specifications')}">
 <head>
   <script type="text/javascript" th:src="@{/resources/js/collectionDropdown.js}"></script>
 </head>
@@ -10,9 +10,10 @@
 
   <form th:object="${specificationObjective}" class="form-horizontal" id="add-specification-objective-form" method="post">
     <input type="hidden" th:field="*{specification}"/>
-    <div class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
+    <input type="hidden" id="collectionType" name="collectionType" th:attr="value=${collectionType} ?: ''"/>
+    <div th:if="${specificationObjective['new'] && collectionType == 'copyTemplate'}" class="col-sm-offset-2 d-flex justify-content-end">
       <div th:replace="~{fragments/templateDropdown :: templateDropdown(${objectiveTemplates})}" />
-      <a th:if="${!specificationObjective['new']}" class="btn btn-sm btn-primary ms-2" onclick="if(confirm('Are you sure you want to delete this specification objective?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
+<!--      <a th:if="${!specificationObjective['new']}" class="btn btn-sm btn-primary ms-2" onclick="if(confirm('Are you sure you want to delete this specification objective?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>-->
     </div>
     <div class="form-group has-feedback">
       <input
@@ -26,7 +27,11 @@
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10 d-flex">
-        <button class="btn btn-primary" type="submit"
+        <a class="btn btn-primary" type="button" href="/specifications1">
+          <i class="fa fa-ban me-1" aria-hidden="true"></i>
+          <span>Cancel</span>
+        </a>
+        <button class="btn btn-primary ms-2" type="submit"
           th:with="text=${specificationObjective['new']} ? 'Add Specification Objective' : 'Update Specification Objective',
                   icon=${specificationObjective['new']} ? 'fa-plus' : 'fa-pencil-square-o'">
           <i class="fa me-1"  th:classappend="${icon}" aria-hidden="true"></i>
@@ -39,5 +44,8 @@
   <form th:if="${!specificationObjective['new']}" id="deleteForm" th:object="${specificationObjective}" th:action="@{/specification/__${specification.id}__/specificationObjective/__${specificationObjective.id}__/delete}" method="post">
       <input type="hidden" th:field="*{id}"/>
   </form>
+  <script type="text/javascript">
+    updateTreeForSpecificationObjective([[${specification.id}]], [[${specificationObjective.id}]]);
+  </script>
 </body>
 </html>
