--- a/src/main/resources/templates/stakeholderObjective/addUpdateStakeholderObjective2.html
+++ b/src/main/resources/templates/stakeholderObjective/addUpdateStakeholderObjective2.html
@@ -8,7 +8,7 @@
     <input type="hidden" th:field="*{stakeholder}"/>
     <input type="hidden" th:field="*{specificationObjective}"/>
     <input type="hidden" id="collectionItemId" name="collectionItemId" th:attr="value=*{specificationObjective.id}"/>
-    <div class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
+    <div class="col-sm-offset-2 d-flex justify-content-end">
       <span th:if="${stakeholderObjective['new']}">
         <div th:replace="~{fragments/collectionDropdown :: specificationObjectivesDropdown(${specification.specificationObjectives}, 'Use Specification Objective', 'No Specification Objectives defined', 'existingSpecificationObjective')}"/>
       </span>
