--- a/src/main/resources/templates/specification/addUpdateSpecification.html
+++ b/src/main/resources/templates/specification/addUpdateSpecification.html
@@ -35,7 +35,7 @@
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10 d-flex">
-        <a class="btn btn-primary" type="button" href="/specifications1">
+        <a class="btn btn-primary" type="button" href="/specifications">
           <i class="fa fa-ban me-1" aria-hidden="true"></i>
           <span>Cancel</span>
         </a>
