--- a/src/main/resources/templates/stakeholder/addUpdateStakeholder.html
+++ b/src/main/resources/templates/stakeholder/addUpdateStakeholder.html
@@ -1,51 +1,56 @@
 <!DOCTYPE html>
 
 <html xmlns:th="https://www.thymeleaf.org"
-  th:replace="~{fragments/layout :: layout (~{::body}, ~{::head}, 'specifications')}">
+      th:replace="~{fragments/layoutSpecifications :: layout (~{::contentBody}, ~{::head}, 'specifications')}">
 <head>
-  <script type="text/javascript" th:src="@{/resources/js/collectionDropdown.js}"></script>
+    <script type="text/javascript" th:src="@{/resources/js/collectionDropdown.js}"></script>
 </head>
 <body>
-  <h2>Stakeholder</h2>
+<th:block th:fragment="contentBody">
+    <h2>Stakeholder</h2>
 
-  <form th:object="${stakeholder}" class="form-horizontal" id="add-stakeholder-form" method="post">
-    <input type="hidden" th:field="*{specification}"/>
-    <input type="hidden" id="collectionType" name="collectionType" th:attr="value=${collectionType} ?: ''"/>
-    <div th:if="${stakeholder['new'] && collectionType == 'copyTemplate'}" class="col-sm-offset-2 d-flex justify-content-end">
-      <div th:replace="~{fragments/templateDropdown :: templateDropdown(${stakeholderTemplates})}" />
-    </div>
-    <div class="form-group has-feedback">
-      <input
-        th:replace="~{fragments/inputField :: input ('Name', 'name', 'text')}" />
-      <input
-        th:replace="~{fragments/inputField :: input ('Description', 'description', 'text')}" />
-      <input
-        th:replace="~{fragments/inputField :: input ('Notes', 'notes', 'textarea')}" />
-      <input
-        th:replace="~{fragments/prioritySelectField :: select ('Priority', 'priority', ${priorities})}" />
-    </div>
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10 d-flex">
-        <a class="btn btn-primary" type="button" href="/specifications">
-          <i class="fa fa-ban me-1" aria-hidden="true"></i>
-          <span>Cancel</span>
-        </a>
-        <button class="btn btn-primary ms-2" type="submit"
-          th:with="text=${stakeholder['new']} ? 'Add Stakeholder' : 'Update Stakeholder',
+    <form th:object="${stakeholder}" class="form-horizontal" id="add-stakeholder-form" method="post">
+        <input type="hidden" th:field="*{specification}"/>
+        <input type="hidden" id="collectionType" name="collectionType" th:attr="value=${collectionType} ?: ''"/>
+        <div th:if="${stakeholder['new'] && collectionType == 'copyTemplate'}"
+             class="col-sm-offset-2 d-flex justify-content-end">
+            <div th:replace="~{fragments/templateDropdown :: templateDropdown(${stakeholderTemplates})}"/>
+        </div>
+        <div class="form-group has-feedback">
+            <input
+                    th:replace="~{fragments/inputField :: input ('Name', 'name', 'text')}"/>
+            <input
+                    th:replace="~{fragments/inputField :: input ('Description', 'description', 'text')}"/>
+            <input
+                    th:replace="~{fragments/inputField :: input ('Notes', 'notes', 'textarea')}"/>
+            <input
+                    th:replace="~{fragments/prioritySelectField :: select ('Priority', 'priority', ${priorities})}"/>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10 d-flex">
+                <a class="btn btn-primary" type="button" href="/specifications">
+                    <i class="fa fa-ban me-1" aria-hidden="true"></i>
+                    <span>Cancel</span>
+                </a>
+                <button class="btn btn-primary ms-2" type="submit"
+                        th:with="text=${stakeholder['new']} ? 'Add Stakeholder' : 'Update Stakeholder',
                   icon=${stakeholder['new']} ? 'fa-plus' : 'fa-pencil-square-o'">
-          <i class="fa me-1"  th:classappend="${icon}" aria-hidden="true"></i>
-          <span th:text="${text}">Add/Update</span>
-        </button>
-        <span class="flex-grow-1"></span>
-      </div>
-    </div>
-  </form>
-  <form th:if="${!stakeholder['new']}" id="deleteForm" th:object="${stakeholder}" th:action="@{/specification/__${specification.id}__/stakeholder/__${stakeholder.id}__/delete}" method="post">
-    <input type="hidden" th:field="*{id}"/>
-    <input type="hidden" th:field="*{specification}"/>
-  </form>
-  <script type="text/javascript">
+                    <i class="fa me-1" th:classappend="${icon}" aria-hidden="true"></i>
+                    <span th:text="${text}">Add/Update</span>
+                </button>
+                <span class="flex-grow-1"></span>
+            </div>
+        </div>
+    </form>
+    <form th:if="${!stakeholder['new']}" id="deleteForm" th:object="${stakeholder}"
+          th:action="@{/specification/__${specification.id}__/stakeholder/__${stakeholder.id}__/delete}" method="post">
+        <input type="hidden" th:field="*{id}"/>
+        <input type="hidden" th:field="*{specification}"/>
+    </form>
+    <script type="text/javascript">
     updateTreeForStakeholder([[${specification.id}]], [[${stakeholder.id}]]);
-  </script>
+
+    </script>
+</th:block>
 </body>
 </html>
