--- a/src/main/resources/templates/fragments/layoutSpecifications.html
+++ b/src/main/resources/templates/fragments/layoutSpecifications.html
@@ -1,23 +1,26 @@
 <!doctype html>
 <html th:fragment="layout (templateSpecifications, head, menu)" class="h-100"
-    th:replace="~{fragments/layoutCommon :: layout (~{::content}, ${head}, ${menu})}">
+      th:replace="~{fragments/layoutCommon :: layout (~{::content}, ${head}, ${menu})}">
 <head>
 </head>
 <body>
-  <th:block th:fragment="content">
+<th:block th:fragment="content">
     <div class="row h-100">
-      <div class="col-4">
-        <h2>Entity Explorer</h2>
-        <div id="tree"></div>
-      </div>
-      <div class="col-8">
-          <div th:replace="~{fragments/flash :: flash}"></div>
-          <th:block th:replace="${templateSpecifications}" />
-          <div class="container mt-4">
-          </div>
-      </div>
+        <div class="col-4">
+            <h2>Entity Explorer</h2>
+            <div id="tree"></div>
+        </div>
+        <div class="col-8">
+            <div th:replace="~{fragments/flash :: flash}"></div>
+            <th:block th:replace="${templateSpecifications}"/>
+            <div class="container mt-4">
+            </div>
+        </div>
     </div>
-  </th:block>
+
+    <form id="commonDeleteForm" method="post">
+    </form>
+</th:block>
 </body>
 
 </html>
