--- a/src/main/resources/templates/specification/specificationList.html
+++ b/src/main/resources/templates/specification/specificationList.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 
-<html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body}, ~{::head},'specifications')}">
+<html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layoutSpecifications :: layout (~{::body}, ~{::head},'specifications')}">
 <head></head>
 <body>
+<th:block th:fragment="contentBody">
 
 <h2>Specifications</h2>
 <table id="specifications" class="table table-striped">
@@ -15,43 +16,13 @@
   <tbody>
   <tr th:each="specification : ${specifications}">
     <td>
-      <a th:href="@{/specification/__${specification.id}__}" th:text="${specification.name}"/></a>
+      <a th:href="@{/specification/__${specification.id}__/edit}" th:text="${specification.name}"/></a>
     </td>
     <td th:text="${specification.priority}"/>
   </tr>
   </tbody>
 </table>
-<div th:if="${totalPages > 1}">
-  <span>Pages:</span>
-  <span>[</span>
-  <span th:each="i: ${#numbers.sequence(1, totalPages)}">
-      <a th:if="${currentPage != i}" th:href="@{'/specification/list?page=' + ${i}}">[[${i}]]</a>
-      <span th:unless="${currentPage != i}">[[${i}]]</span>
-    </span>
-  <span>]&nbsp;</span>
-  <span>
-      <a th:if="${currentPage > 1}" th:href="@{'/specification/list?page=1'}" title="First"
-         class="fa fa-fast-backward"></a>
-      <span th:unless="${currentPage > 1}" title="First" class="fa fa-fast-backward"></span>
-    </span>
-  <span>
-      <a th:if="${currentPage > 1}" th:href="@{'/specification/list?page=__${currentPage - 1}__'}" title="Previous"
-         class="fa fa-step-backward"></a>
-      <span th:unless="${currentPage > 1}" title="Previous" class="fa fa-step-backward"></span>
-    </span>
-  <span>
-      <a th:if="${currentPage < totalPages}" th:href="@{'/specification/list?page=__${currentPage + 1}__'}" title="Next"
-         class="fa fa-step-forward"></a>
-      <span th:unless="${currentPage < totalPages}" title="Next" class="fa fa-step-forward"></span>
-    </span>
-  <span>
-      <a th:if="${currentPage < totalPages}" th:href="@{'/specification/list?page=__${totalPages}__'}" title="Last"
-         class="fa fa-fast-forward"></a>
-      <span th:unless="${currentPage < totalPages}" title="Last" class="fa fa-step-forward"></span>
-    </span>
-</div>
-<div th:replace="~{fragments/flash :: subFlashMessage}"></div>
-<div><a class="btn btn-primary" th:href="@{/specification/new}"><i class="fa fa-plus me-1" aria-hidden="true"></i>  Add Specification</a> </div>
+</th:block>
 </body>
 </html>
 
