--- a/src/main/resources/templates/fragments/layoutCommon.html
+++ b/src/main/resources/templates/fragments/layoutCommon.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html th:fragment="layout (templateCommon, head, menu)" class="h-100">
+<html th:fragment="layout (contentBody, contentHead, menu)" class="h-100">
 
 <head>
 
@@ -17,14 +17,11 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-  <script th:src="@{/webjars/jquery/3.6.3/jquery.min.js}"></script>
-  <script th:src="@{/webjars/jstree/3.3.14/jstree.min.js}"></script>
-  <script type="text/javascript" th:src="@{/resources/js/specifications.js}"></script>
   <link th:href="@{/webjars/font-awesome/4.7.0/css/font-awesome.min.css}" rel="stylesheet">
   <link rel="stylesheet" th:href="@{/resources/css/soam.css}" />
   <link th:href="@{/webjars/jstree/3.3.14/themes/default/style.min.css}" rel="stylesheet">
 
-  <th:block th:insert="${head}" />
+  <th:block th:insert="${contentHead}" />
 
 </head>
 
@@ -146,7 +143,7 @@
     </div>
   </nav>
   <div class="container-fluid h-100 p-5">
-    <th:block th:insert="${templateCommon}" />
+    <th:block th:insert="${contentBody}" />
   </div>
 
   <script th:src="@{/webjars/bootstrap/5.1.3/dist/js/bootstrap.bundle.min.js}"></script>
