--- a/src/main/resources/templates/objective/template/addUpdateObjectiveTemplate.html
+++ b/src/main/resources/templates/objective/template/addUpdateObjectiveTemplate.html
@@ -1,41 +1,53 @@
 <!DOCTYPE html>
 
 <html xmlns:th="https://www.thymeleaf.org"
-  th:replace="~{fragments/layout :: layout (~{::body}, ~{::head}, 'templates')}">
+      th:replace="~{fragments/layoutTemplates :: layout (~{::contentBody}, ~{::head}, 'templates')}">
 <head>
-  <script type="text/javascript" th:src="@{/resources/js/collectionDropdown.js}"></script>
+    <script type="text/javascript" th:src="@{/resources/js/collectionDropdown.js}"></script>
 </head>
 <body>
+<th:block th:fragment="contentBody">
 
-  <h2>Objective Template</h2>
-  <form th:object="${objectiveTemplate}" class="form-horizontal" id="add-objective-form" method="post">
-    <div class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
-      <div th:replace="~{fragments/templateDropdown :: templateDropdown(${objectiveTemplates})}" />
-      <a class="btn btn-sm btn-primary ms-2" th:if="${!objectiveTemplate['new']}" onclick="if(confirm('Are you sure you want to delete this objective template?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
-    </div>
-    <div class="form-group has-feedback">
-      <input
-        th:replace="~{fragments/inputField :: input ('Name', 'name', 'text')}" />
-      <input
-        th:replace="~{fragments/inputField :: input ('Description', 'description', 'text')}" />
-      <input
-        th:replace="~{fragments/inputField :: input ('Notes', 'notes', 'textarea')}" />
-      <input
-        th:replace="~{fragments/prioritySelectField :: select ('Priority', 'priority', ${priorities})}" />
-    </div>
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10 d-flex align-items-center">
-        <button class="btn btn-primary me-2" type="submit"
-          th:with="text=${objectiveTemplate['new']} ? 'Add Objective Template' : 'Update Objective Template',
+    <h2>Objective Template</h2>
+    <form th:object="${objectiveTemplate}" class="form-horizontal" id="add-objective-form" method="post">
+        <input type="hidden" id="collectionType" name="collectionType" th:attr="value=${collectionType} ?: ''"/>
+        <div th:if="${objectiveTemplate['new'] && collectionType == 'copyTemplate'}"
+             class="col-sm-offset-2 d-flex justify-content-end">
+            <div th:replace="~{fragments/templateDropdown :: templateDropdown(${objectiveTemplates})}"/>
+        </div>
+        <div class="form-group has-feedback">
+            <input
+                    th:replace="~{fragments/inputField :: input ('Name', 'name', 'text')}"/>
+            <input
+                    th:replace="~{fragments/inputField :: input ('Description', 'description', 'text')}"/>
+            <input
+                    th:replace="~{fragments/inputField :: input ('Notes', 'notes', 'textarea')}"/>
+            <input
+                    th:replace="~{fragments/prioritySelectField :: select ('Priority', 'priority', ${priorities})}"/>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10 d-flex align-items-center">
+                <a class="btn btn-primary" type="button" href="/templates">
+                    <i class="fa fa-ban me-1" aria-hidden="true"></i>
+                    <span>Cancel</span>
+                </a>
+                <button class="btn btn-primary ms-2" type="submit"
+                        th:with="text=${objectiveTemplate['new']} ? 'Add Objective Template' : 'Update Objective Template',
                 icon=${objectiveTemplate['new']} ? 'fa-plus' : 'fa-pencil-square-o'">
-          <i class="fa me-2" th:classappend="${icon}" aria-hidden="true"></i><span th:text="${text}">Add/Update</span>
-        </button>
-        <span class="flex-grow-1"></span>
-      </div>
-    </div>
-  </form>
-  <form th:if="${!objectiveTemplate['new']}" id="deleteForm" th:object="${objectiveTemplate}" th:action="@{/objective/template/__${objectiveTemplate.id}__/delete}" method="post">
-    <input type="hidden" th:field="*{id}"/>
-  </form>
+                    <i class="fa me-2" th:classappend="${icon}" aria-hidden="true"></i><span th:text="${text}">Add/Update</span>
+                </button>
+                <span class="flex-grow-1"></span>
+            </div>
+        </div>
+    </form>
+    <form th:if="${!objectiveTemplate['new']}" id="deleteForm" th:object="${objectiveTemplate}"
+          th:action="@{/objective/template/__${objectiveTemplate.id}__/delete}" method="post">
+        <input type="hidden" th:field="*{id}"/>
+    </form>
+    <script type="text/javascript">
+    updateTreeForObjectiveTemplate([[${objectiveTemplate.id}]]);
+
+    </script>
+</th:block>
 </body>
 </html>
