--- a/src/main/resources/templates/specification/addUpdateSpecification.html
+++ b/src/main/resources/templates/specification/addUpdateSpecification.html
@@ -1,60 +1,62 @@
 <!DOCTYPE html>
 
 <html xmlns:th="https://www.thymeleaf.org"
-  th:replace="~{fragments/layoutSpecifications :: layout (~{::contentBody}, ~{::head}, 'specifications')}">
+      th:replace="~{fragments/layoutSpecifications :: layout (~{::contentBody}, ~{::head}, 'specifications')}">
 <head>
-  <script type="text/javascript" th:src="@{/resources/js/collectionDropdown.js}"></script>
+    <script type="text/javascript" th:src="@{/resources/js/collectionDropdown.js}"></script>
 </head>
 <body>
-  <th:block th:fragment="contentBody">
-  <h2>Specification</h2>
+<th:block th:fragment="contentBody">
+    <h2>Specification</h2>
 
-  <form th:object="${specification}" class="form-horizontal" id="add-specification-form" method="post">
-    <input type="hidden" id="collectionType" name="collectionType" th:attr="value=${collectionType} ?: ''"/>
-    <input type="hidden" id="collectionItemId" name="collectionItemId" th:attr="value=${collectionItemId} ?: -1"/>
-    <div class="col-sm-offset-2 d-flex justify-content-end">
-      <span th:if="${specification['new'] && collectionType == 'srcSpecification'}">
-        <div th:replace="~{fragments/collectionDropdown :: collectionDropdown(${specifications}, 'Copy Existing Specification', 'No Specifications defined', 'srcSpecification')}" />
-      </span>
-      <span th:if="${specification['new'] && collectionType == 'templateDeepCopy'}" class="ms-2">
-        <div th:replace="~{fragments/collectionDropdown :: collectionDropdown(${specificationTemplates}, 'Create from Template', 'No Specification Templates defined', 'templateDeepCopy')}" />
-      </span>
-      <span th:if="${specification['new'] && collectionType == 'copyTemplate'}"  class="ms-2">
-          <div th:replace="~{fragments/templateDropdown :: templateDropdown(${specificationTemplates})}" />
-      </span>
-    </div>
-    <div class="form-group has-feedback">
-      <input
-        th:replace="~{fragments/inputField :: input ('Name', 'name', 'text')}" />
-      <input
-        th:replace="~{fragments/inputField :: input ('Description', 'description', 'text')}" />
-      <input
-        th:replace="~{fragments/inputField :: input ('Notes', 'notes', 'textarea')}" />
-      <input
-        th:replace="~{fragments/prioritySelectField :: select ('Priority', 'priority', ${priorities})}" />
-    </div>
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10 d-flex">
-        <a class="btn btn-primary" type="button" href="/specifications">
-          <i class="fa fa-ban me-1" aria-hidden="true"></i>
-          <span>Cancel</span>
-        </a>
-        <button class="btn btn-primary ms-2" type="submit"
-          th:with="text=${specification['new']} ? 'Add Specification' : 'Update Specification',
+    <form th:object="${specification}" class="form-horizontal" id="add-specification-form" method="post">
+        <input type="hidden" id="collectionType" name="collectionType" th:attr="value=${collectionType} ?: ''"/>
+        <input type="hidden" id="collectionItemId" name="collectionItemId" th:attr="value=${collectionItemId} ?: -1"/>
+        <div class="col-sm-offset-2 d-flex justify-content-end">
+            <div th:if="${specification['new'] && collectionType == 'srcSpecification'}">
+                <div th:replace="~{fragments/collectionDropdown :: collectionDropdown(${specifications}, 'Copy Existing Specification', 'No Specifications defined', 'srcSpecification')}"/>
+            </div>
+            <div th:if="${specification['new'] && collectionType == 'templateDeepCopy'}" class="ms-2">
+                <div th:replace="~{fragments/collectionDropdown :: collectionDropdown(${specificationTemplates}, 'Create from Template', 'No Specification Templates defined', 'templateDeepCopy')}"/>
+            </div>
+            <div th:if="${specification['new'] && collectionType == 'copyTemplate'}" class="ms-2">
+                <div th:replace="~{fragments/templateDropdown :: templateDropdown(${specificationTemplates})}"/>
+            </div>
+        </div>
+        <div class="form-group has-feedback">
+            <input
+                    th:replace="~{fragments/inputField :: input ('Name', 'name', 'text')}"/>
+            <input
+                    th:replace="~{fragments/inputField :: input ('Description', 'description', 'text')}"/>
+            <input
+                    th:replace="~{fragments/inputField :: input ('Notes', 'notes', 'textarea')}"/>
+            <input
+                    th:replace="~{fragments/prioritySelectField :: select ('Priority', 'priority', ${priorities})}"/>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10 d-flex">
+                <a class="btn btn-primary" type="button" href="/specifications">
+                    <i class="fa fa-ban me-1" aria-hidden="true"></i>
+                    <span>Cancel</span>
+                </a>
+                <button class="btn btn-primary ms-2" type="submit"
+                        th:with="text=${specification['new']} ? 'Add Specification' : 'Update Specification',
                   icon=${specification['new']} ? 'fa-plus' : 'fa-pencil-square-o'">
-          <i class="fa me-1"  th:classappend="${icon}" aria-hidden="true"></i>
-          <span th:text="${text}">Add/Update</span>
-        </button>
-        <span class="flex-grow-1"></span>
-      </div>
-    </div>
-  </form>
-  <form th:if="${!specification['new']}" id="deleteForm" th:object="${specification}" th:action="@{/specification/__${specification.id}__/delete}" method="post">
-      <input type="hidden" th:field="*{id}"/>
-  </form>
-  <script type="text/javascript">
+                    <i class="fa me-1" th:classappend="${icon}" aria-hidden="true"></i>
+                    <span th:text="${text}">Add/Update</span>
+                </button>
+                <span class="flex-grow-1"></span>
+            </div>
+        </div>
+    </form>
+    <form th:if="${!specification['new']}" id="deleteForm" th:object="${specification}"
+          th:action="@{/specification/__${specification.id}__/delete}" method="post">
+        <input type="hidden" th:field="*{id}"/>
+    </form>
+    <script type="text/javascript">
     updateTreeForSpecification([[${specification.id}]]);
-  </script>
-  </th:block>
+
+    </script>
+</th:block>
 </body>
 </html>
