--- a/src/main/resources/templates/specification/template/addUpdateSpecificationTemplate.html
+++ b/src/main/resources/templates/specification/template/addUpdateSpecificationTemplate.html
@@ -1,48 +1,58 @@
 <!DOCTYPE html>
 
 <html xmlns:th="https://www.thymeleaf.org"
-  th:replace="~{fragments/layout :: layout (~{::body}, ~{::head}, 'templates')}">
+      th:replace="~{fragments/layoutTemplates :: layout (~{::contentBody}, ~{::head}, 'templates')}">
 <head>
-  <script type="text/javascript" th:src="@{/resources/js/collectionDropdown.js}"></script>
+    <script type="text/javascript" th:src="@{/resources/js/collectionDropdown.js}"></script>
 </head>
 <body>
+<th:block th:fragment="contentBody">
 
-  <h2>Specification Template</h2>
-  <form th:object="${specificationTemplate}" class="form-horizontal" id="add-specification-form" method="post">
-    <input type="hidden" id="collectionType" name="collectionType" th:attr="value=${collectionType} ?: ''"/>
-    <input type="hidden" id="collectionItemId" name="collectionItemId" th:attr="value=${collectionItemId} ?: -1"/>
-    <div class="col-sm-offset-2 col-sm-10 d-flex justify-content-end">
-      <span th:if="${specificationTemplate['new']}">
-        <div th:replace="~{fragments/collectionDropdown :: collectionDropdown(${specificationTemplates}, 'Copy Existing Specification Template', 'No Specification Templates defined', 'templateDeepCopy')}" />
-      </span>
-      <span class="ms-2">
-        <div th:replace="~{fragments/templateDropdown :: templateDropdown(${specificationTemplates})}" />
-      </span>
-      <a class="btn btn-sm btn-primary ms-2" th:if="${!specificationTemplate['new']}" onclick="if(confirm('Are you sure you want to delete this specification template?')) document.getElementById('deleteForm').submit()"><i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete</a>
-    </div>
-    <div class="form-group has-feedback">
-      <input
-        th:replace="~{fragments/inputField :: input ('Name', 'name', 'text')}" />
-      <input
-        th:replace="~{fragments/inputField :: input ('Description', 'description', 'text')}" />
-      <input
-        th:replace="~{fragments/inputField :: input ('Notes', 'notes', 'textarea')}" />
-      <input
-        th:replace="~{fragments/prioritySelectField :: select ('Priority', 'priority', ${priorities})}" />
-    </div>
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10 d-flex align-items-center">
-        <button class="btn btn-primary me-2" type="submit"
-          th:with="text=${specificationTemplate['new']} ? 'Add Specification Template' : 'Update Specification Template',
+    <h2>Specification Template</h2>
+    <form th:object="${specificationTemplate}" class="form-horizontal" id="add-specification-form" method="post">
+        <input type="hidden" id="collectionType" name="collectionType" th:attr="value=${collectionType} ?: ''"/>
+        <input type="hidden" id="collectionItemId" name="collectionItemId" th:attr="value=${collectionItemId} ?: -1"/>
+        <div class="col-sm-offset-2 d-flex justify-content-end">
+            <div th:if="${specificationTemplate['new'] && collectionType == 'templateDeepCopy'}">
+                <div th:replace="~{fragments/collectionDropdown :: collectionDropdown(${specificationTemplates}, 'Copy Existing Specification Template', 'No Specification Templates defined', 'templateDeepCopy')}"/>
+            </div>
+            <div th:if="${specificationTemplate['new'] && collectionType == 'copyTemplate'}" class="ms-2">
+                <div th:replace="~{fragments/templateDropdown :: templateDropdown(${specificationTemplates})}"/>
+            </div>
+        </div>
+        <div class="form-group has-feedback">
+            <input
+                    th:replace="~{fragments/inputField :: input ('Name', 'name', 'text')}"/>
+            <input
+                    th:replace="~{fragments/inputField :: input ('Description', 'description', 'text')}"/>
+            <input
+                    th:replace="~{fragments/inputField :: input ('Notes', 'notes', 'textarea')}"/>
+            <input
+                    th:replace="~{fragments/prioritySelectField :: select ('Priority', 'priority', ${priorities})}"/>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10 d-flex align-items-center">
+                <a class="btn btn-primary" type="button" href="/templates">
+                    <i class="fa fa-ban me-1" aria-hidden="true"></i>
+                    <span>Cancel</span>
+                </a>
+                <button class="btn btn-primary ms-2" type="submit"
+                        th:with="text=${specificationTemplate['new']} ? 'Add Specification Template' : 'Update Specification Template',
                 icon=${specificationTemplate['new']} ? 'fa-plus' : 'fa-pencil-square-o'">
-          <i class="fa me-2" th:classappend="${icon}" aria-hidden="true"></i><span th:text="${text}">Add/Update</span>
-        </button>
-        <span class="flex-grow-1"></span>
-      </div>
-    </div>
-  </form>
-  <form th:if="${!specificationTemplate['new']}" id="deleteForm" th:object="${specificationTemplate}" th:action="@{/specification/template/__${specificationTemplate.id}__/delete}" method="post">
-    <input type="hidden" th:field="*{id}"/>
-  </form>
+                    <i class="fa me-2" th:classappend="${icon}" aria-hidden="true"></i><span th:text="${text}">Add/Update</span>
+                </button>
+                <span class="flex-grow-1"></span>
+            </div>
+        </div>
+    </form>
+    <form th:if="${!specificationTemplate['new']}" id="deleteForm" th:object="${specificationTemplate}"
+          th:action="@{/specification/template/__${specificationTemplate.id}__/delete}" method="post">
+        <input type="hidden" th:field="*{id}"/>
+    </form>
+    <script type="text/javascript">
+    updateTreeForSpecificationTemplate([[${specificationTemplate.id}]]);
+
+    </script>
+</th:block>
 </body>
 </html>
