--- a/src/main/resources/templates/stakeholderObjective/addUpdateStakeholderObjective.html
+++ b/src/main/resources/templates/stakeholderObjective/addUpdateStakeholderObjective.html
@@ -12,13 +12,13 @@
     <form th:object="${stakeholderObjective}" class="form-horizontal" id="add-stakeholder-objective-form" method="post">
         <input type="hidden" th:field="*{stakeholder}"/>
         <input type="hidden" th:field="*{specificationObjective}"/>
+        <input type="hidden" id="collectionType" name="collectionType" th:attr="value=${collectionType} ?: ''"/>
         <input type="hidden" id="collectionItemId" name="collectionItemId"
                th:attr="value=*{specificationObjective.id}"/>
-        <input type="hidden" id="name" onchange="console.log(this.value)"/>
         <div class="col-sm-offset-2 d-flex justify-content-end">
-      <span th:if="${stakeholderObjective['new']}">
-        <div th:replace="~{fragments/collectionDropdown :: specificationObjectivesDropdown(${specification.specificationObjectives}, 'Use Specification Objective', 'No Specification Objectives defined', 'existingSpecificationObjective')}"/>
-      </span>
+            <div th:if="${stakeholderObjective['new']}">
+                <div th:replace="~{fragments/collectionDropdown :: specificationObjectivesDropdown(${specification.specificationObjectives}, 'Use Specification Objective', 'No Specification Objectives defined', 'existingSpecificationObjective')}"/>
+            </div>
         </div>
         <div class="form-group has-feedback">
             <input
@@ -53,6 +53,7 @@
     </form>
     <script type="text/javascript">
     updateTreeForStakeholderObjective([[${specification.id}]], [[${stakeholder.id}]], [[${stakeholderObjective.id}]]);
+
 
     </script>
 </th:block>
