--- a/src/main/resources/templates/templateLink/templateLinkList.html
+++ b/src/main/resources/templates/templateLink/templateLinkList.html
@@ -1,72 +1,90 @@
 <!DOCTYPE html>
 
-<html xmlns:th="https://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body}, ~{::head}, 'templateLinks')}">
+<html xmlns:th="https://www.thymeleaf.org"
+      th:replace="~{fragments/layoutTemplates :: layout (~{::contentBody}, ~{::head}, 'templateLinks')}">
 <head></head>
 <body>
+<th:block th:fragment="contentBody">
 
-<h2>Template Links</h2>
-<form id="templateLinksForm" th:object="${templateLinkForm}" th:action="@{/templateLink/list}" method="post">
-<input type="hidden" th:name="deleteAction" th:value="@{/templateLink/delete}"/>
-<input type="hidden" th:field="*{deleteTemplateLinkId}"/>
-<table id="templateLinks" class="table table-striped">
-    <thead>
-    <tr>
-        <th>Specification Template</th>
-        <th>Stakeholder Template</th>
-        <th>Objective Template</th>
-        <th></th>
-    </tr>
-    <tr>
-        <td>
-            <input th:replace="~{fragments/templateLinkItemSelectField :: selectFilter ('filterSpecificationTemplate', ${specificationTemplates})}" />
-        </td>
-        <td>
-            <input th:replace="~{fragments/templateLinkItemSelectField :: selectFilter ('filterStakeholderTemplate', ${stakeholderTemplates})}" />
-        </td>
-        <td></td>
-        <td></td>
-    </tr>
-    </thead>
-    <tbody th:with="isFiltered = ${templateLinkForm.filterSpecificationTemplate != null || templateLinkForm.filterStakeholderTemplate != null}">
-        <td colspan="4" th:if="${#lists.isEmpty(templateLinks) && !isFiltered}">
-            <div class="alert alert-warning mb-0">No Template Links have been defined.</div>
-        </td>
-        <td colspan="4" th:if="${#lists.isEmpty(templateLinks) && isFiltered}">
-            <div class="alert alert-warning mb-0">No Template Links found for selected filters.</div>
-        </td>
-        <tr th:each="templateLink : ${templateLinks}" th:object="${templateLink}" th:with="templateLinkId = *{id}">
-            <td th:text="*{specificationTemplate.name}"/>
-            <td th:text="*{stakeholderTemplate.name}"/>
-            <td th:text="*{objectiveTemplate.name}"/>
-            <td>
-                <button class="btn btn-sm btn-primary mt-0" type="button"
-                    th:attr="onclick = ${'if(confirm(''Are you sure you want to delete this template link?'')) { this.form.deleteTemplateLinkId.value=' + templateLinkId + ';this.form.action=this.form.deleteAction.value;this.form.submit(); }'}">
-                    <i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete
-                </button>
+    <h2>Template Links</h2>
+    <form id="templateLinksForm" th:object="${templateLinkForm}" th:action="@{/templateLink/list}" method="post">
+        <input type="hidden" th:name="deleteAction" th:value="@{/templateLink/delete}"/>
+        <input type="hidden" th:field="*{deleteTemplateLinkId}"/>
+        <table id="templateLinks" class="table table-striped">
+            <thead>
+            <tr>
+                <th>Specification Template</th>
+                <th>Stakeholder Template</th>
+                <th>Objective Template</th>
+                <!--        <th></th>-->
+            </tr>
+            <tr>
+                <td>
+                    <input th:replace="~{fragments/templateLinkItemSelectField :: selectFilter ('filterSpecificationTemplate', ${specificationTemplates})}"/>
+                </td>
+                <td>
+                    <input th:replace="~{fragments/templateLinkItemSelectField :: selectFilter ('filterStakeholderTemplate', ${stakeholderTemplates})}"/>
+                </td>
+                <td></td>
+                <!--        <td></td>-->
+            </tr>
+            </thead>
+            <tbody th:with="isFiltered = ${templateLinkForm.filterSpecificationTemplate != null || templateLinkForm.filterStakeholderTemplate != null}">
+            <td colspan="3" th:if="${#lists.isEmpty(templateLinks) && !isFiltered}">
+                <div class="alert alert-warning mb-0">No Template Links have been defined.</div>
             </td>
-        </tr>
-    </tbody>
-    <tfoot>
-    <tr>
-        <td>
-            <input th:replace="~{fragments/templateLinkItemSelectField :: selectNewItem ('newTemplateLink.specificationTemplate', ${specificationTemplates}, 'fa-plus')}" />
-        </td>
-        <td>
-            <input th:replace="~{fragments/templateLinkItemSelectField :: selectNewItem ('newTemplateLink.stakeholderTemplate', ${stakeholderTemplates}, 'fa-chain')}" />
-        </td>
-        <td>
-            <input th:replace="~{fragments/templateLinkItemSelectField :: selectNewItem ('newTemplateLink.objectiveTemplate', ${objectiveTemplates}, 'fa-chain')}" />
-        </td>
-        <td>
-            <button type="submit" class="btn btn-sm btn-primary mt-0" th:formaction="@{/templateLink/new}">
-                <i class="fa fa-plus me-1" aria-hidden="true"></i>Add
-            </button>
-        </td>
-    </tr>
-    </tfoot>
-</table>
-</form>
-<div th:replace="~{fragments/flash :: subFlashMessage}"></div>
+            <td colspan="3" th:if="${#lists.isEmpty(templateLinks) && isFiltered}">
+                <div class="alert alert-warning mb-0">No Template Links found for selected filters.</div>
+            </td>
+            <tr th:each="templateLink : ${templateLinks}" th:object="${templateLink}" th:with="templateLinkId = *{id}">
+                <td th:text="*{specificationTemplate.name}"/>
+                <td th:text="*{stakeholderTemplate.name}"/>
+                <td th:text="*{objectiveTemplate.name}"/>
+                <!--            <td>-->
+                <!--                <button class="btn btn-sm btn-primary mt-0" type="button"-->
+                <!--                    th:attr="onclick = ${'if(confirm(''Are you sure you want to delete this template link?'')) { this.form.deleteTemplateLinkId.value=' + templateLinkId + ';this.form.action=this.form.deleteAction.value;this.form.submit(); }'}">-->
+                <!--                    <i class="fa fa-trash-o me-2" aria-hidden="true"></i>Delete-->
+                <!--                </button>-->
+                <!--            </td>-->
+            </tr>
+            </tbody>
+            <tfoot>
+            <tr>
+                <td>
+                    <input th:replace="~{fragments/templateLinkItemSelectField :: selectNewItem ('newTemplateLink.specificationTemplate', ${specificationTemplates}, 'fa-plus')}"/>
+                </td>
+                <td>
+                    <input th:replace="~{fragments/templateLinkItemSelectField :: selectNewItem ('newTemplateLink.stakeholderTemplate', ${stakeholderTemplates}, 'fa-chain')}"/>
+                </td>
+                <td>
+                    <input th:replace="~{fragments/templateLinkItemSelectField :: selectNewItem ('newTemplateLink.objectiveTemplate', ${objectiveTemplates}, 'fa-chain')}"/>
+                </td>
+<!--                <td>-->
+<!--                    <button type="submit" class="btn btn-sm btn-primary mt-0" th:formaction="@{/templateLink/new}">-->
+<!--                        <i class="fa fa-plus me-1" aria-hidden="true"></i>Add-->
+<!--                    </button>-->
+<!--                </td>-->
+            </tr>
+            </tfoot>
+        </table>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10 d-flex align-items-center">
+                <a class="btn btn-primary" type="button" href="/templates">
+                    <i class="fa fa-ban me-1" aria-hidden="true"></i>
+                    <span>Cancel</span>
+                </a>
+                <button type="submit" class="btn btn-primary ms-2" th:formaction="@{/templateLink/new}">
+                    <i class="fa fa-plus me-2" aria-hidden="true"></i>Add Template Link
+                </button>
+                <span class="flex-grow-1"></span>
+            </div>
+        </div>
+    </form>
+    <div th:replace="~{fragments/flash :: subFlashMessage}"></div>
+    <script type="text/javascript">
+    updateTreeForTemplateLink(-1);
+    </script>
+</th:block>
 </body>
 </html>
 
