implemented "Filter" context menu for templates

--- a/src/main/resources/templates/specification/specificationList.html
+++ b/src/main/resources/templates/specification/specificationList.html
@@ -22,6 +22,10 @@
   </tr>
   </tbody>
 </table>
+<a class="btn btn-primary" type="button" href="/specifications">
+  <i class="fa fa-ban me-1" aria-hidden="true"></i>
+  <span>Cancel</span>
+</a>
 </th:block>
 </body>
 </html>
