--- a/src/main/resources/templates/objective/template/findObjectiveTemplate.html
+++ b/src/main/resources/templates/objective/template/findObjectiveTemplate.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
 
 <html xmlns:th="https://www.thymeleaf.org"
-      th:replace="~{fragments/layout :: layout (~{::body}, ~{::head},'templates')}">
+      th:replace="~{fragments/layoutTemplates :: layout (~{::contentBody}, ~{::head},'templates')}">
 <head></head>
 <body>
-<h2>Find Objective Template</h2>
-<form th:object="${objectiveTemplate}" th:action="@{/objective/templates}" method="get"
-      class="form-horizontal" id="search-objective-form">
-  <div class="form-group">
-    <div class="control-group" id="lastNameGroup">
-      <label class="col-sm-2 control-label">Name </label>
-      <div class="col-sm-10">
-        <input class="form-control" th:field="*{name}" size="30" /> <span class="help-inline"><div
-              th:if="${#fields.hasAnyErrors()}">
+<th:block th:fragment="contentBody">
+    <h2>Find Objective Template</h2>
+    <form th:object="${objectiveTemplate}" method="post" class="form-horizontal" id="search-objective-form">
+        <div class="form-group">
+            <div class="control-group" id="lastNameGroup">
+                <label class="col-sm-2 control-label">Name </label>
+                <div class="col-sm-10">
+                    <input class="form-control" th:field="*{name}" size="30"/> <span class="help-inline"><div
+                        th:if="${#fields.hasAnyErrors()}">
               <p th:each="err : ${#fields.allErrors()}" th:text="${err}">Error</p>
             </div></span>
-      </div>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-primary"><i class="fa fa-search me-1" aria-hidden="true"></i> Find Objective Template</button>
-      <a class="btn btn-primary" th:href="@{/objective/template/list}"><i class="fa fa-list-ul me-1" aria-hidden="true"></i> List all</a>
-    </div>
-  </div>
-  <a class="btn btn-primary" th:href="@{/objective/template/new}"><i class="fa fa-plus me-1" aria-hidden="true"></i> Add Objective Template</a>
-</form>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10 d-flex">
+                <a class="btn btn-primary" type="button" href="/templates">
+                    <i class="fa fa-ban me-1" aria-hidden="true"></i>
+                    <span>Cancel</span>
+                </a>
+                <button type="submit" class="btn btn-primary ms-2"><i class="fa fa-search me-1" aria-hidden="true"></i>
+                    Find Objective Template
+                </button>
+            </div>
+        </div>
+    </form>
+    <script type="text/javascript">
+    updateTreeForObjectiveTemplates();
+
+
+    </script>
+</th:block>
 </body>
 </html>
