--- a/src/main/resources/templates/specification/findSpecification.html
+++ b/src/main/resources/templates/specification/findSpecification.html
@@ -20,8 +20,12 @@
             </div>
         </div>
         <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-primary"><i class="fa fa-search me-1" aria-hidden="true"></i> Find
+            <div class="col-sm-offset-2 col-sm-10 d-flex">
+                <a class="btn btn-primary" type="button" href="/specifications">
+                    <i class="fa fa-ban me-1" aria-hidden="true"></i>
+                    <span>Cancel</span>
+                </a>
+                <button type="submit" class="btn btn-primary ms-2"><i class="fa fa-search me-1" aria-hidden="true"></i> Find
                     Specification
                 </button>
             </div>
