--- a/src/main/resources/templates/templateLink/templateLinkList.html
+++ b/src/main/resources/templates/templateLink/templateLinkList.html
@@ -5,20 +5,21 @@
 <head></head>
 <body>
 <th:block th:fragment="contentBody">
-
-    <h2>Template Links</h2>
-    <form id="templateLinksForm" th:object="${templateLinkForm}" th:action="@{/templateLink/list}" method="post">
+    <h2>Find Template Link</h2>
+    <form id="templateLinksForm" th:object="${templateLinkForm}" method="post">
         <input type="hidden" th:name="deleteAction" th:value="@{/templateLink/delete}"/>
         <input type="hidden" th:field="*{deleteTemplateLinkId}"/>
         <table id="templateLinks" class="table table-striped">
             <thead>
             <tr>
+                <th>Link</th>
                 <th>Specification Template</th>
                 <th>Stakeholder Template</th>
                 <th>Objective Template</th>
-                <th></th>
+                <!--                <th></th>-->
             </tr>
             <tr>
+                <td></td>
                 <td>
                     <input th:replace="~{fragments/templateLinkItemSelectField :: selectFilter ('filterSpecificationTemplate', ${specificationTemplates})}"/>
                 </td>
@@ -26,7 +27,7 @@
                     <input th:replace="~{fragments/templateLinkItemSelectField :: selectFilter ('filterStakeholderTemplate', ${stakeholderTemplates})}"/>
                 </td>
                 <td></td>
-                <td></td>
+                <!--                <td></td>-->
             </tr>
             </thead>
             <tbody th:with="isFiltered = ${templateLinkForm.filterSpecificationTemplate != null || templateLinkForm.filterStakeholderTemplate != null}">
@@ -37,10 +38,22 @@
                 <div class="alert alert-warning mb-0">No Template Links found for selected filters.</div>
             </td>
             <tr th:each="templateLink : ${templateLinks}" th:object="${templateLink}" th:with="templateLinkId = *{id}">
-                <td th:text="*{specificationTemplate.name}"/>
-                <td th:text="*{stakeholderTemplate.name}"/>
-                <td th:text="*{objectiveTemplate.name}"/>
-                <td></td>
+                <td>
+                    <a th:href="@{/templateLink/__*{id}__/edit}" class="fa fa-chain lh-1 me-2 flex-grow-0">&nbsp;</a>
+                </td>
+                <td>
+                    <a th:href="@{/specification/template/__*{specificationTemplate.id}__/edit}"
+                       th:text="*{specificationTemplate.name}"/>
+                </td>
+                <td>
+                    <a th:href="@{/stakeholder/template/__*{stakeholderTemplate.id}__/edit}"
+                       th:text="*{stakeholderTemplate.name}"/>
+                </td>
+                <td>
+                    <a th:href="@{/objective/template/__*{objectiveTemplate.id}__/edit}"
+                       th:text="*{objectiveTemplate.name}"/>
+                </td>
+                <!--                <td></td>-->
                 <!--            <td>-->
                 <!--                <button class="btn btn-sm btn-primary mt-0" type="button"-->
                 <!--                    th:attr="onclick = ${'if(confirm(''Are you sure you want to delete this template link?'')) { this.form.deleteTemplateLinkId.value=' + templateLinkId + ';this.form.action=this.form.deleteAction.value;this.form.submit(); }'}">-->
@@ -49,41 +62,47 @@
                 <!--            </td>-->
             </tr>
             </tbody>
-            <tfoot>
-            <tr>
-                <td>
-                    <input th:replace="~{fragments/templateLinkItemSelectField :: selectNewItem ('newTemplateLink.specificationTemplate', ${specificationTemplates}, 'fa-plus')}"/>
-                </td>
-                <td>
-                    <input th:replace="~{fragments/templateLinkItemSelectField :: selectNewItem ('newTemplateLink.stakeholderTemplate', ${stakeholderTemplates}, 'fa-chain')}"/>
-                </td>
-                <td>
-                    <input th:replace="~{fragments/templateLinkItemSelectField :: selectNewItem ('newTemplateLink.objectiveTemplate', ${objectiveTemplates}, 'fa-chain')}"/>
-                </td>
-                <td>
-                    <button type="submit" class="btn btn-sm btn-primary mt-0" th:formaction="@{/templateLink/new}">
-                        <i class="fa fa-plus me-1" aria-hidden="true"></i>Add
-                    </button>
-                </td>
-            </tr>
-            </tfoot>
+            <!--            <tfoot>-->
+            <!--            <tr>-->
+            <!--                <td>-->
+            <!--                    <input th:replace="~{fragments/templateLinkItemSelectField :: selectNewItem ('newTemplateLink.specificationTemplate', ${specificationTemplates}, 'fa-plus')}"/>-->
+            <!--                </td>-->
+            <!--                <td>-->
+            <!--                    <input th:replace="~{fragments/templateLinkItemSelectField :: selectNewItem ('newTemplateLink.stakeholderTemplate', ${stakeholderTemplates}, 'fa-chain')}"/>-->
+            <!--                </td>-->
+            <!--                <td>-->
+            <!--                    <input th:replace="~{fragments/templateLinkItemSelectField :: selectNewItem ('newTemplateLink.objectiveTemplate', ${objectiveTemplates}, 'fa-chain')}"/>-->
+            <!--                </td>-->
+            <!--                <td>-->
+            <!--                    <button type="submit" class="btn btn-sm btn-primary mt-0" th:formaction="@{/templateLink/new}">-->
+            <!--                        <i class="fa fa-plus me-1" aria-hidden="true"></i>Add-->
+            <!--                    </button>-->
+            <!--                </td>-->
+            <!--            </tr>-->
+            <!--            </tfoot>-->
         </table>
-<!--        <div class="form-group">-->
-<!--            <div class="col-sm-offset-2 col-sm-10 d-flex align-items-center">-->
-<!--                <a class="btn btn-primary" type="button" href="/templates">-->
-<!--                    <i class="fa fa-ban me-1" aria-hidden="true"></i>-->
-<!--                    <span>Cancel</span>-->
-<!--                </a>-->
-<!--                <button type="submit" class="btn btn-primary ms-2" th:formaction="@{/templateLink/new}">-->
-<!--                    <i class="fa fa-plus me-2" aria-hidden="true"></i>Add Template Link-->
-<!--                </button>-->
-<!--                <span class="flex-grow-1"></span>-->
-<!--            </div>-->
-<!--        </div>-->
+        <!--        <div class="form-group">-->
+        <!--            <div class="col-sm-offset-2 col-sm-10 d-flex align-items-center">-->
+        <!--                <a class="btn btn-primary" type="button" href="/templates">-->
+        <!--                    <i class="fa fa-ban me-1" aria-hidden="true"></i>-->
+        <!--                    <span>Cancel</span>-->
+        <!--                </a>-->
+        <!--                <button type="submit" class="btn btn-primary ms-2" th:formaction="@{/templateLink/new}">-->
+        <!--                    <i class="fa fa-plus me-2" aria-hidden="true"></i>Add Template Link-->
+        <!--                </button>-->
+        <!--                <span class="flex-grow-1"></span>-->
+        <!--            </div>-->
+        <!--        </div>-->
     </form>
-    <div th:replace="~{fragments/flash :: subFlashMessage}"></div>
+    <!--    <div th:replace="~{fragments/flash :: subFlashMessage}"></div>-->
+    <a class="btn btn-primary" type="button" href="/templates">
+        <i class="fa fa-ban me-1" aria-hidden="true"></i>
+        <span>Cancel</span>
+    </a>
     <script type="text/javascript">
-    updateTreeForTemplateLink(-1);
+    updateTreeForTemplateLinks();
+
+
     </script>
 </th:block>
 </body>
